==> jameswalmsley/bitthunder/arch/arm/mach/lm3sxx/mcpwm.c <==
#include <bitthunder.h>
#include "mcpwm.h"
#include "rcc.h"

static BT_ERROR mcpwm_set_channelconfig(BT_HANDLE hMCPWM, BT_u32 ulChannel, BT_MCPWM_CHANNEL_CONFIG *pConfig) {
	volatile LM3Sxx_MCPWM_REGS *pRegs = hMCPWM->pRegs;

	BT_u32 ulInputClk = BT_LM3Sxx_GetMainFrequency();

	pRegs->PWMBlocks[ulChannel].LOAD = (ulInputClk / pConfig->ulFrequency)-1;
	pRegs->PWMBlocks[ulChannel].CMPA = pConfig->ulPulsewidth;

	if (pConfig->eType == BT_MCPWM_CHANNEL_MODE_CENTER_ALIGNED) {
		pRegs->PWMBlocks[ulChannel].CTL |= 0x00000002;
		pRegs->PWMBlocks[ulChannel].GENA = 0x000000D0;
		pRegs->PWMBlocks[ulChannel].GENB = 0x000000B0;
	}
	else {
		pRegs->PWMBlocks[ulChannel].CTL &= ~0x00000002;
		pRegs->PWMBlocks[ulChannel].GENA = 0x0000008C;
		pRegs->PWMBlocks[ulChannel].GENB = 0x000000C8;
	}

	if (pConfig->bDeadtimeEnable){
		pRegs->PWMBlocks[ulChannel].DBRISE = pConfig->ulDeadtime;
		pRegs->PWMBlocks[ulChannel].DBFALL = pConfig->ulDeadtime;
		pRegs->PWMBlocks[ulChannel].DBCTL = 0x00000001;
	}
	else {
		pRegs->PWMBlocks[ulChannel].DBCTL = 0x00000000;
	}

	return BT_ERR_NONE;
}

static BT_ERROR mcpwm_get_channelconfig(BT_HANDLE hMCPWM, BT_u32 ulChannel, BT_MCPWM_CHANNEL_CONFIG *pConfig) {
	volatile LM3Sxx_MCPWM_REGS *pRegs = hMCPWM->pRegs;

	BT_u32 ulInputClk = BT_LM3Sxx_GetMainFrequency();

	pConfig->ulFrequency	= ulInputClk/(pRegs->PWMBlocks[ulChannel].LOAD);
	pConfig->ulPulsewidth	= pRegs->PWMBlocks[ulChannel].CMPA;

	if (pRegs->PWMBlocks[ulChannel].CTL & 0x00000002)
		pConfig->eType = BT_MCPWM_CHANNEL_MODE_CENTER_ALIGNED;
	else
		pConfig->eType = BT_MCPWM_CHANNEL_MODE_EDGE_ALIGNED;

	if (pRegs->PWMBlocks[ulChannel].DBCTL & 0x00000001) {
		pConfig->bDeadtimeEnable = BT_TRUE;
		pConfig->ulDeadtime = pRegs->PWMBlocks[ulChannel].DBRISE;
	}
	else
		pConfig->bDeadtimeEnable = BT_FALSE;

	return BT_ERR_NONE;
}

static BT_u32 mcpwm_get_channelpulsewidth(BT_HANDLE hMCPWM, BT_u32 ulChannel, BT_ERROR *pError) {
	volatile LM3Sxx_MCPWM_REGS *pRegs = hMCPWM->pRegs;

	if (pError)
		*pError = BT_ERR_NONE;

	return pRegs->PWMBlocks[ulChannel].CMPA;
}

static BT_ERROR mcpwm_set_channelpulsewidth(BT_HANDLE hMCPWM, BT_u32 ulChannel, BT_u32 ulValue) {
	volatile LM3Sxx_MCPWM_REGS *pRegs = hMCPWM->pRegs;

	pRegs->PWMBlocks[ulChannel].CMPA = ulValue;

	return BT_ERR_NONE;
}

static BT_ERROR mcpwm_start(BT_HANDLE hMCPWM, BT_u32 ulChannel) {
	volatile LM3Sxx_MCPWM_REGS *pRegs = hMCPWM->pRegs;


	pRegs->PWMENABLE |= 0x00000003 << ulChannel*2;
	pRegs->PWMBlocks[ulChannel].CTL |= 0x00000001;

	return BT_ERR_NONE;
}

static BT_ERROR mcpwm_stop(BT_HANDLE hMCPWM, BT_u32 ulChannel) {
	volatile LM3Sxx_MCPWM_REGS *pRegs = hMCPWM->pRegs;

	pRegs->PWMENABLE &= ~(0x00000003 << ulChannel*2);
	pRegs->PWMBlocks[ulChannel].CTL &= ~0x00000001;

	return BT_ERR_NONE;
}

static BT_ERROR mcpwm_setconfig(BT_HANDLE hMCPWM, BT_MCPWM_CONFIG *pConfig) {
	volatile LM3Sxx_MCPWM_REGS *pRegs = hMCPWM->pRegs;
	BT_u32 i;

	pRegs->PWMENUPD = 0x0000AAAA;
	for (i = 0; i < 3; i++) {
		pRegs->PWMBlocks[i].CTL = 0x0000AA80;
	}

	return BT_ERR_NONE;
}

static void enableMCPWMPeripheralClock(BT_HANDLE hMCPWM) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hMCPWM->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LM3Sxx_RCC->RCGC[0] |= LM3Sxx_RCC_RCGC_PWM0EN;
		break;
	}
	default: {
		break;
	}
	}
}

static void disableMCPWMPeripheralClock(BT_HANDLE hMCPWM) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hMCPWM->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LM3Sxx_RCC->RCGC[0] &= ~LM3Sxx_RCC_RCGC_PWM0EN;
		break;
	}
	default: {
		break;
	}
	}
}

static BT_BOOL isMCPWMPeripheralClockEnabled(BT_HANDLE hMCPWM) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hMCPWM->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		if(LM3Sxx_RCC->RCGC[0] & LM3Sxx_RCC_RCGC_PWM0EN) {
			return BT_TRUE;
		}
		break;
	}
	default: {
		break;
	}
	}

	return BT_FALSE;
}
