==> jameswalmsley/bitthunder/arch/arm/mach/lpc17xx/mcpwm.c <==
#include <bitthunder.h>
#include "mcpwm.h"
#include "rcc.h"

static BT_ERROR mcpwm_set_channelconfig(BT_HANDLE hMCPWM, BT_u32 ulChannel, BT_MCPWM_CHANNEL_CONFIG *pConfig) {
	volatile LPC17xx_MCPWM_REGS *pRegs = hMCPWM->pRegs;

	BT_u32 ulInputClk = BT_LPC17xx_GetPeripheralClock(g_MCPWM_PERIPHERAL[hMCPWM->id]);

	pRegs->MCTC[ulChannel]  = pConfig->ulTimeValue;
	pRegs->MCLIM[ulChannel] = (ulInputClk / pConfig->ulFrequency)-1;
	pRegs->MCMAT[ulChannel] = pConfig->ulPulsewidth;

	if (pConfig->eType == BT_MCPWM_CHANNEL_MODE_CENTER_ALIGNED)
		pRegs->MCCON_SET = LPC17xx_MCPWM_MCCON_CENTER << (8*ulChannel);
	else
		pRegs->MCCON_CLR = LPC17xx_MCPWM_MCCON_CENTER << (8*ulChannel);

	if (pConfig->ePolarity == BT_MCPWM_CHANNEL_POLARITY_PASSIVE_HI)
		pRegs->MCCON_SET = LPC17xx_MCPWM_MCCON_POLAR << (8*ulChannel);
	else
		pRegs->MCCON_CLR = LPC17xx_MCPWM_MCCON_POLAR << (8*ulChannel);

	if (pConfig->bDeadtimeEnable){
		pRegs->MCCON_SET = LPC17xx_MCPWM_MCCON_DTE << (8*ulChannel);
		pRegs->MCDT &= ~(0x3FF << (10*ulChannel));
		pRegs->MCDT |= pConfig->ulDeadtime << (10*ulChannel);
	}
	else {
		pRegs->MCCON_CLR = LPC17xx_MCPWM_MCCON_DTE << (8*ulChannel);
	}

	if (pConfig->bUpdateEnable)
		pRegs->MCCON_CLR = LPC17xx_MCPWM_MCCON_DISUP << (8*ulChannel);
	else
		pRegs->MCCON_SET = LPC17xx_MCPWM_MCCON_DISUP << (8*ulChannel);

	return BT_ERR_NONE;
}

static BT_ERROR mcpwm_get_channelconfig(BT_HANDLE hMCPWM, BT_u32 ulChannel, BT_MCPWM_CHANNEL_CONFIG *pConfig) {
	volatile LPC17xx_MCPWM_REGS *pRegs = hMCPWM->pRegs;

	BT_u32 ulInputClk = BT_LPC17xx_GetPeripheralClock(g_MCPWM_PERIPHERAL[hMCPWM->id]);

	pConfig->ulTimeValue	= pRegs->MCTC[ulChannel];
	pConfig->ulFrequency	= ulInputClk/(pRegs->MCLIM[ulChannel]+1);
	pConfig->ulPulsewidth	= pRegs->MCMAT[ulChannel];

	if (pRegs->MCCON & (LPC17xx_MCPWM_MCCON_CENTER << (8*ulChannel)))
		pConfig->eType = BT_MCPWM_CHANNEL_MODE_CENTER_ALIGNED;
	else
		pConfig->eType = BT_MCPWM_CHANNEL_MODE_EDGE_ALIGNED;

	if (pRegs->MCCON & (LPC17xx_MCPWM_MCCON_POLAR << (8*ulChannel)))
		pConfig->ePolarity = BT_MCPWM_CHANNEL_POLARITY_PASSIVE_HI;
	else
		pConfig->ePolarity = BT_MCPWM_CHANNEL_POLARITY_PASSIVE_LO;

	if (pRegs->MCCON & (LPC17xx_MCPWM_MCCON_DTE << (8*ulChannel))) {
		pConfig->bDeadtimeEnable = BT_TRUE;
		pConfig->ulDeadtime = (pRegs->MCDT >> (10*ulChannel)) & 0x3FF;
	}
	else
		pConfig->bDeadtimeEnable = BT_FALSE;

	if (pRegs->MCCON & (LPC17xx_MCPWM_MCCON_DISUP << (8*ulChannel)))
		pConfig->bUpdateEnable = BT_TRUE;
	else
		pConfig->bUpdateEnable = BT_FALSE;

	return BT_ERR_NONE;
}

static BT_u32 mcpwm_get_channelpulsewidth(BT_HANDLE hMCPWM, BT_u32 ulChannel, BT_ERROR *pError) {
	volatile LPC17xx_MCPWM_REGS *pRegs = hMCPWM->pRegs;

	if (pError)
		*pError = BT_ERR_NONE;

	return pRegs->MCMAT[ulChannel];
}

static BT_ERROR mcpwm_set_channelpulsewidth(BT_HANDLE hMCPWM, BT_u32 ulChannel, BT_u32 ulValue) {
	volatile LPC17xx_MCPWM_REGS *pRegs = hMCPWM->pRegs;

	pRegs->MCMAT[ulChannel] = ulValue;

	return BT_ERR_NONE;
}

static BT_ERROR mcpwm_start(BT_HANDLE hMCPWM, BT_u32 ulChannel) {
	volatile LPC17xx_MCPWM_REGS *pRegs = hMCPWM->pRegs;

	pRegs->MCCON_SET = LPC17xx_MCPWM_MCCON_RUN << (8*ulChannel);

	return BT_ERR_NONE;
}

static BT_ERROR mcpwm_stop(BT_HANDLE hMCPWM, BT_u32 ulChannel) {
	volatile LPC17xx_MCPWM_REGS *pRegs = hMCPWM->pRegs;

	if (pRegs->MCCON & (LPC17xx_MCPWM_MCCON_RUN << (8*ulChannel))) {
		while (1) {
			BT_u32 ulVal1 = pRegs->MCTC[ulChannel];
			BT_u32 ulVal2 = pRegs->MCTC[ulChannel];
			if (ulVal2 > ulVal1) break;
		}
	}
	pRegs->MCCON_CLR = (LPC17xx_MCPWM_MCCON_RUN << (8*ulChannel));

	return BT_ERR_NONE;
}

static BT_ERROR mcpwm_setconfig(BT_HANDLE hMCPWM, BT_MCPWM_CONFIG *pConfig) {
	volatile LPC17xx_MCPWM_REGS *pRegs = hMCPWM->pRegs;

	if (pConfig->eMode == BT_MCPWM_MODE_AC)
		pRegs->MCCON_SET = LPC17xx_MCPWM_MCCON_ACMODE;
	else
		pRegs->MCCON_CLR = LPC17xx_MCPWM_MCCON_ACMODE;

	if (pConfig->eMode == BT_MCPWM_MODE_DC)
		pRegs->MCCON_SET = LPC17xx_MCPWM_MCCON_DCMODE;
	else
		pRegs->MCCON_CLR = LPC17xx_MCPWM_MCCON_DCMODE;

	if (pConfig->bOutputsInverted)
		pRegs->MCCON_SET = LPC17xx_MCPWM_MCCON_INVBDC;
	else
		pRegs->MCCON_CLR = LPC17xx_MCPWM_MCCON_INVBDC;

	pRegs->MCCP = pConfig->ulCommutationPattern;

	return BT_ERR_NONE;
}

static void enableMCPWMPeripheralClock(BT_HANDLE hMCPWM) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hMCPWM->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LPC17xx_RCC->PCONP |= LPC17xx_RCC_PCONP_MCPWM0EN;
		break;
	}
	default: {
		break;
	}
	}
}

static void disableMCPWMPeripheralClock(BT_HANDLE hMCPWM) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hMCPWM->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LPC17xx_RCC->PCONP &= ~LPC17xx_RCC_PCONP_MCPWM0EN;
		break;
	}
	default: {
		break;
	}
	}
}

static BT_BOOL isMCPWMPeripheralClockEnabled(BT_HANDLE hMCPWM) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hMCPWM->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		if(LPC17xx_RCC->PCONP & LPC17xx_RCC_PCONP_MCPWM0EN) {
			return BT_TRUE;
		}
		break;
	}
	default: {
		break;
	}
	}

	return BT_FALSE;
}
